add new website from server na

--- a/xem-phim-moi/vung-dat-linh-hon/index.html
+++ b/xem-phim-moi/vung-dat-linh-hon/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1686,43 +1686,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngan-loi-noi-doi" title="Ngàn Lời Nói Dối">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngan-loi-noi-doi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ngàn Lời Nói Dối
-            </span>
-            <span class="list-top-movie-item-en">
-             Lies of Lies
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/last-the-night" title="Last the Night">
+          <a class="list-top-movie-link" href="/phim-moi/con-thinh-no-cua-becky" title="Cơn Thịnh Nộ Của Becky">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/last-the-night-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-thinh-no-cua-becky-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Last the Night
+             Cơn Thịnh Nộ Của Becky
             </span>
             <span class="list-top-movie-item-en">
-             Last the Night
+             The Wrath of Becky
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1730,21 +1708,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phi-vu-trieu-do-tu-tokyo-den-berlin-phan-2" title="Phi vụ triệu đô: Từ Tokyo đến Berlin (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/ncis-phan-13" title="NCIS (Phần 13)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phi-vu-trieu-do-tu-tokyo-den-berlin-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ncis-phan-13-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phi vụ triệu đô: Từ Tokyo đến Berlin (Phần 2)
+             NCIS (Phần 13)
             </span>
             <span class="list-top-movie-item-en">
-             Money Heist: From Tokyo to Berlin (Season 2)
+             NCIS Season 13
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1752,21 +1730,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-be-hawa" title="Cô Bé Hawa">
+          <a class="list-top-movie-link" href="/phim-moi/can-ham" title="Căn hầm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-be-hawa-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/can-ham-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô Bé Hawa
+             Căn hầm
             </span>
             <span class="list-top-movie-item-en">
-             Hawa
+             10 Cloverfield Lane
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             7 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1774,18 +1752,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thanh-thoi-gian" title="Thành Thời Gian">
+          <a class="list-top-movie-link" href="/phim-moi/star-trek-voyager-phan-7" title="Star Trek: Voyager (Phần 7)">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-thoi-gian-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/star-trek-voyager-phan-7-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thành Thời Gian
+             Star Trek: Voyager (Phần 7)
             </span>
             <span class="list-top-movie-item-en">
-             Castle in the Time
+             Star Trek: Voyager (Season 7)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nhat-thoi-im-lang" title="Nhất Thời Im Lặng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhat-thoi-im-lang-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nhất Thời Im Lặng
+            </span>
+            <span class="list-top-movie-item-en">
+             Moment of Silence
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
