add new website from server na

--- a/xem-phim-moi/the-gioi-bi-mat-cua-arrietty/index.html
+++ b/xem-phim-moi/the-gioi-bi-mat-cua-arrietty/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1686,40 +1686,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/long-tuan-thien-ha" title="Long Tuần Thiên Hạ">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/long-tuan-thien-ha-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Long Tuần Thiên Hạ
-            </span>
-            <span class="list-top-movie-item-en">
-             Long Tuần Thiên Hạ
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/may" title="May">
+          <a class="list-top-movie-link" href="/phim-moi/biet-doi-am-sat" title="Biệt Đội Ám Sát">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/may-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-am-sat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             May
+             Biệt Đội Ám Sát
             </span>
             <span class="list-top-movie-item-en">
-             May
+             Silmido
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1730,18 +1708,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thanh-xuan-nam-ay-chung-ta-gap-nhau" title="Thanh Xuân Năm Ấy Chúng Ta Gặp Nhau">
+          <a class="list-top-movie-link" href="/phim-moi/loi-cuoi" title="Lời cuối">
            <span class="status">
-            HD Vietsub + Thuyết minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-xuan-nam-ay-chung-ta-gap-nhau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-cuoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thanh Xuân Năm Ấy Chúng Ta Gặp Nhau
+             Lời cuối
             </span>
             <span class="list-top-movie-item-en">
-             Precious Youth
+             The Last Word
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1752,21 +1730,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mot-tinh-yeu-con-nho-ban-dao-dien" title="Một tình yêu còn nhớ: Bản đạo diễn">
+          <a class="list-top-movie-link" href="/phim-moi/tham-hoa-bao-katrina" title="Thảm Họa Bão Katrina">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mot-tinh-yeu-con-nho-ban-dao-dien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-hoa-bao-katrina-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Một tình yêu còn nhớ: Bản đạo diễn
+             Thảm Họa Bão Katrina
             </span>
             <span class="list-top-movie-item-en">
-             I missed you: Director's Cut
+             Hours
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1774,18 +1752,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/rebelde-tuoi-tre-noi-loan" title="Rebelde: Tuổi trẻ nổi loạn">
+          <a class="list-top-movie-link" href="/phim-moi/avengers-trieu-dai-cua-kang" title="Avengers: Triều Đại của Kang">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rebelde-tuoi-tre-noi-loan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/avengers-trieu-dai-cua-kang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Rebelde: Tuổi trẻ nổi loạn
+             Avengers: Triều Đại của Kang
             </span>
             <span class="list-top-movie-item-en">
-             Rebelde
+             Avengers: The Kang Dynasty
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-duoi-nui-su-tu" title="Chuyện Dưới Núi Sư Tử">
+           <span class="status">
+            HD Lồng Tiếng
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-duoi-nui-su-tu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chuyện Dưới Núi Sư Tử
+            </span>
+            <span class="list-top-movie-item-en">
+             The Stories of Lion Rock Spirit
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
