add new website from server na

--- a/xem-phim-moi/the-gioi-bi-mat-cua-arrietty/index.html
+++ b/xem-phim-moi/the-gioi-bi-mat-cua-arrietty/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1686,21 +1686,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/biet-doi-am-sat" title="Biệt Đội Ám Sát">
+          <a class="list-top-movie-link" href="/phim-moi/the-notorious-bettie-page" title="The Notorious Bettie Page">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-am-sat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-notorious-bettie-page-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Biệt Đội Ám Sát
+             The Notorious Bettie Page
             </span>
             <span class="list-top-movie-item-en">
-             Silmido
+             The Notorious Bettie Page
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1708,18 +1708,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loi-cuoi" title="Lời cuối">
+          <a class="list-top-movie-link" href="/phim-moi/so-phan-cua-ne-zha" title="Số phận của Ne Zha">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-cuoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/so-phan-cua-ne-zha-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lời cuối
+             Số phận của Ne Zha
             </span>
             <span class="list-top-movie-item-en">
-             The Last Word
+             Ne Zha's Destiny
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-dieu-chia-cach-chung-ta" title="Những Điều Chia Cách Chúng Ta">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-dieu-chia-cach-chung-ta-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Những Điều Chia Cách Chúng Ta
+            </span>
+            <span class="list-top-movie-item-en">
+             All That Divides Us
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-chu-di-cham-thoi" title="Thiếu Chủ Đi Chậm Thôi">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-chu-di-cham-thoi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Chủ Đi Chậm Thôi
+            </span>
+            <span class="list-top-movie-item-en">
+             I've Fallen for You
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1730,65 +1774,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-hoa-bao-katrina" title="Thảm Họa Bão Katrina">
+          <a class="list-top-movie-link" href="/phim-moi/royal-romance" title="Royal Romance">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-hoa-bao-katrina-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/royal-romance-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thảm Họa Bão Katrina
+             Royal Romance
             </span>
             <span class="list-top-movie-item-en">
-             Hours
+             Royal Romance
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/avengers-trieu-dai-cua-kang" title="Avengers: Triều Đại của Kang">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/avengers-trieu-dai-cua-kang-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Avengers: Triều Đại của Kang
-            </span>
-            <span class="list-top-movie-item-en">
-             Avengers: The Kang Dynasty
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-duoi-nui-su-tu" title="Chuyện Dưới Núi Sư Tử">
-           <span class="status">
-            HD Lồng Tiếng
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-duoi-nui-su-tu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chuyện Dưới Núi Sư Tử
-            </span>
-            <span class="list-top-movie-item-en">
-             The Stories of Lion Rock Spirit
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
