add new website from server na

--- a/xem-phim-moi/ngon-doi-hoa-hong-anh/index.html
+++ b/xem-phim-moi/ngon-doi-hoa-hong-anh/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1690,84 +1690,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cua-hang-nha-ben-chuong-ke-tiep-phan-2" title="Cửa hàng nhà bên: Chương kế tiếp (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/tu-khi-co-polly" title="Từ Khi Có Polly">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cua-hang-nha-ben-chuong-ke-tiep-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tu-khi-co-polly-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cửa hàng nhà bên: Chương kế tiếp (Phần 2)
+             Từ Khi Có Polly
             </span>
             <span class="list-top-movie-item-en">
-             Check The Store Next Door: The Next Chapter (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nha-tro-kinh-hoang" title="Nhà Trọ Kinh Hoàng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-tro-kinh-hoang-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nhà Trọ Kinh Hoàng
-            </span>
-            <span class="list-top-movie-item-en">
-             Vacancy
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/taylor-tomlinson-co-tat-ca" title="Taylor Tomlinson: Có tất cả">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/taylor-tomlinson-co-tat-ca-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Taylor Tomlinson: Có tất cả
-            </span>
-            <span class="list-top-movie-item-en">
-             Taylor Tomlinson: Have It All
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mat-that-vay-ca-loi" title="Mật Thất Vây Cá Lội">
-           <span class="status">
-            HD Vietsub + Thuyết minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-that-vay-ca-loi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mật Thất Vây Cá Lội
-            </span>
-            <span class="list-top-movie-item-en">
-             Dt.Appledog's Time
+             Along Came Polly
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1778,21 +1712,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truong-an-12-canh-gio" title="Trường An 12 Canh Giờ">
+          <a class="list-top-movie-link" href="/phim-moi/noi-anh-biet-noi-dau-co-cau-vong" title="Nói Anh Biết Nơi Đâu Có Cầu Vồng">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truong-an-12-canh-gio-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/noi-anh-biet-noi-dau-co-cau-vong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trường An 12 Canh Giờ
+             Nói Anh Biết Nơi Đâu Có Cầu Vồng
             </span>
             <span class="list-top-movie-item-en">
-             Trường An 12 Canh Giờ
+             Rainbow Town
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/kong-woo-giu-gap" title="Kong woo giu gap">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kong-woo-giu-gap-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Kong woo giu gap
+            </span>
+            <span class="list-top-movie-item-en">
+             Kong woo giu gap
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/kill-bok-soon" title="Kill Bok Soon">
+           <span class="status">
+            FHD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kill-bok-soon-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Kill Bok Soon
+            </span>
+            <span class="list-top-movie-item-en">
+             Kill Boksoon
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ten-trom-ti-hon" title="Tên trộm tí hon">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ten-trom-ti-hon-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tên trộm tí hon
+            </span>
+            <span class="list-top-movie-item-en">
+             Little Man
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
