add new website from server na

--- a/xem-phim-moi/ngon-doi-hoa-hong-anh/index.html
+++ b/xem-phim-moi/ngon-doi-hoa-hong-anh/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1690,18 +1690,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tu-khi-co-polly" title="Từ Khi Có Polly">
+          <a class="list-top-movie-link" href="/phim-moi/toc-do-chet-nguoi" title="Tốc Độ Chết Người">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tu-khi-co-polly-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toc-do-chet-nguoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Từ Khi Có Polly
+             Tốc Độ Chết Người
             </span>
             <span class="list-top-movie-item-en">
-             Along Came Polly
+             Born to Race: Fast Track
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1712,18 +1712,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/noi-anh-biet-noi-dau-co-cau-vong" title="Nói Anh Biết Nơi Đâu Có Cầu Vồng">
+          <a class="list-top-movie-link" href="/phim-moi/kung-fu-bong-ro" title="Kung Fu Bóng Rổ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/noi-anh-biet-noi-dau-co-cau-vong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kung-fu-bong-ro-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nói Anh Biết Nơi Đâu Có Cầu Vồng
+             Kung Fu Bóng Rổ
             </span>
             <span class="list-top-movie-item-en">
-             Rainbow Town
+             Kung Fu Dunk
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1734,18 +1734,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/kong-woo-giu-gap" title="Kong woo giu gap">
+          <a class="list-top-movie-link" href="/phim-moi/ai-da-giet-sara-phan-3" title="Ai đã giết Sara? (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kong-woo-giu-gap-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ai-da-giet-sara-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kong woo giu gap
+             Ai đã giết Sara? (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             Kong woo giu gap
+             Who Killed Sara? (Season 3)
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ashes" title="Ashes">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ashes-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ashes
+            </span>
+            <span class="list-top-movie-item-en">
+             Ashes
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1756,43 +1778,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/kill-bok-soon" title="Kill Bok Soon">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kill-bok-soon-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Kill Bok Soon
-            </span>
-            <span class="list-top-movie-item-en">
-             Kill Boksoon
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ten-trom-ti-hon" title="Tên trộm tí hon">
+          <a class="list-top-movie-link" href="/phim-moi/can-can-cong-ly" title="Cán Cân Công Lý">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ten-trom-ti-hon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/can-can-cong-ly-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tên trộm tí hon
+             Cán Cân Công Lý
             </span>
             <span class="list-top-movie-item-en">
-             Little Man
+             Black Light House
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
